# ObfuscationTest

./: BogusControlFlow.cpp  BogusControlFlow.h  CMakeLists.txt  CryptoUtils.cpp  CryptoUtils.h  Flattening.cpp  Flattening.h  FlatteningPlus.cpp  FlatteningPlus.h  IndirectBranch.cpp  IndirectBranch.h  PMRegistration.cpp  Utils.cpp  Utils.h  build.sh  readme.md  test.ll
tests/: test  test.cpp  test.ll  test2_des.cpp  test2_des.ll  test_aes.cpp  test_fla  test_fla.ll
